src/Application/Client/SDBPClientWrapper.h

typedef void * ClientObj;
int             SDBP_SequenceNextCStr(ClientObj client, uint64_t tableID, char* key, int len);
int             SDBP_ListKeys(
                 ClientObj client, uint64_t tableID,
                 const std::string& startKey, const std::string& endKey, const std::string& prefix,
                 unsigned count, bool forwardDirection, bool skip);
int             SDBP_ListKeysCStr(
                 ClientObj client, uint64_t tableID,
                 char* startKey, int startKeyLen, char* endKey, int endKeyLen, char* prefix, int prefixLen,
                 unsigned count, bool forwardDirection, bool skip);
int             SDBP_ListKeyValues(
                 ClientObj client, uint64_t tableID,
                 const std::string& startKey, const std::string& endKey, const std::string& prefix,
                 unsigned count, bool forwardDirection, bool skip);
int             SDBP_ListKeyValuesCStr(
                 ClientObj client, uint64_t tableID,
                 char* startKey, int startKeyLen, char* endKey, int endKeyLen, char* prefix, int prefixLen,
                 unsigned count, bool forwardDirection, bool skip);
int             SDBP_Count(
                 ClientObj client, uint64_t tableID,
                 const std::string& startKey, const std::string& endKey, const std::string& prefix,
                 bool forwardDirection);
int             SDBP_CountCStr(
                 ClientObj client, uint64_t tableID,
                 char* startKey, int startKeyLen, char* endKey, int endKeyLen, char* prefix, int prefixLen,
                 bool forwardDirection);
/*
===============================================================================================

 Grouping commands

===============================================================================================
*/

int             SDBP_Begin(ClientObj client);
int             SDBP_Submit(ClientObj client);
int             SDBP_Cancel(ClientObj client);
/*
===============================================================================================

 Debugging

===============================================================================================
*/

void            SDBP_SetTrace(bool trace);
void            SDBP_SetLogFile(const std::string& filename);
void            SDBP_LogTrace(const std::string& msg);
void            SDBP_SetShardPoolSize(unsigned shardPoolSize);
std::string     SDBP_GetVersion();
std::string     SDBP_GetDebugString();