src/Application/Client/CSharp/ScalienClient/scaliendb_clientPINVOKE.cs


  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SequenceNextCStr")]
  public static extern int SDBP_SequenceNextCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ListKeys")]
  public static extern int SDBP_ListKeys(HandleRef jarg1, ulong jarg2, string jarg3, string jarg4, string jarg5, uint jarg6, bool jarg7, bool jarg8);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ListKeysCStr")]
  public static extern int SDBP_ListKeysCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, IntPtr jarg5, int jarg6, IntPtr jarg7, int jarg8, uint jarg9, bool jarg10, bool jarg11);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ListKeyValues")]
  public static extern int SDBP_ListKeyValues(HandleRef jarg1, ulong jarg2, string jarg3, string jarg4, string jarg5, uint jarg6, bool jarg7, bool jarg8);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ListKeyValuesCStr")]
  public static extern int SDBP_ListKeyValuesCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, IntPtr jarg5, int jarg6, IntPtr jarg7, int jarg8, uint jarg9, bool jarg10, bool jarg11);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Count")]
  public static extern int SDBP_Count(HandleRef jarg1, ulong jarg2, string jarg3, string jarg4, string jarg5, bool jarg6);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_CountCStr")]
  public static extern int SDBP_CountCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, IntPtr jarg5, int jarg6, IntPtr jarg7, int jarg8, bool jarg9);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Begin")]
  public static extern int SDBP_Begin(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Submit")]
  public static extern int SDBP_Submit(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Cancel")]
  public static extern int SDBP_Cancel(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetTrace")]
  public static extern void SDBP_SetTrace(bool jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetDebug")]
  public static extern void SDBP_SetDebug(bool jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetLogFile")]
  public static extern void SDBP_SetLogFile(string jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetTraceBufferSize")]
  public static extern void SDBP_SetTraceBufferSize(uint jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_LogTrace")]
  public static extern void SDBP_LogTrace(string jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetCrashReporter")]
  public static extern void SDBP_SetCrashReporter(bool jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetShardPoolSize")]
  public static extern void SDBP_SetShardPoolSize(uint jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetMaxConnections")]
  public static extern void SDBP_SetMaxConnections(uint jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetVersion")]
  public static extern string SDBP_GetVersion();

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetDebugString")]
  public static extern string SDBP_GetDebugString();
}

}
